Linkerd/Examples/BlueGreen/frontend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: test
  labels:
    app: frontend-blue
spec:
  selector:
    matchLabels:
      app: frontend-blue
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: frontend-blue
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: cfg
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: cfg
          configMap:
            name: frontend-blue
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
  namespace: test
spec:
  ports:
  - name: service
    port: 8080
  selector:
    app: frontend-blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-blue
  namespace: test
  labels:
    app: podinfo-blue
spec:
  selector:
    matchLabels:
      app: podinfo-blue
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: podinfo-blue
    spec:
      containers:
      - name: podinfod
        image: quay.io/stefanprodan/podinfo:1.7.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9898
        command:
        - ./podinfo
        - --port=9898
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-blue
  namespace: test
  labels:
    app: podinfo-blue
spec:
  type: ClusterIP
  ports:
    - port: 9898
  selector:
    app: podinfo-blue
---
